Upgrade to 1.21.10